# cpp-io-impl

./: CMakeLists.txt  README.md
Examples/: ByteIO.cpp  CMakeLists.txt  HelloWorld.cpp  WriteInt.cpp  WriteIntFixed.cpp
Headers/: io
Headers/Internal/: any_input_output_stream.h  any_input_output_stream.hpp  any_input_stream.h  any_input_stream.hpp  any_output_stream.h  any_output_stream.hpp  any_stream_utilities.h  any_stream_utilities.hpp  basic_file.h  basic_input_memory_stream.h  basic_input_memory_stream.hpp  basic_input_output_memory_stream.h  basic_input_output_memory_stream.hpp  basic_output_memory_stream.h  basic_output_memory_stream.hpp  buffered_file.h  context_concepts.h  default_context.h  default_context.hpp  file.h  file_options.h  file_stream_base.h  format.h  format.hpp  format_utilities.h  format_utilities.hpp  input_file_stream.h  input_output_file_stream.h  input_output_span_stream.h  input_output_span_stream.hpp  input_span_stream.h  input_span_stream.hpp  io_error.h  offset.h  offset.hpp  output_file_stream.h  output_span_stream.h  output_span_stream.hpp  position.h  position.hpp  (+17 more)
Headers/Internal/POSIX/: Platform.h  StandardStreams.h  Utilities.h
Headers/Internal/Windows/: Platform.h  StandardStreams.h  Utilities.h
Sources/: basic_file.cpp  buffered_file.cpp  file.cpp  file_stream_base.cpp  input_file_stream.cpp  input_output_file_stream.cpp  io_error.cpp  output_file_stream.cpp  special_file.cpp  standard_streams.cpp
Sources/POSIX/: StandardStreams.cpp  Utilities.cpp
Sources/Windows/: StandardStreams.cpp  Utilities.cpp
Tests/: CMakeLists.txt  FileBenchmark.cpp
